--- a/style.css
+++ b/style.css
@@ -1,26 +1,51 @@
 * {
     box-sizing: border-box;
-    margin: 1;
+    margin: 0;
+    padding: 0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
+
+/* TYPE SELECTORS */
 
 body{
     display:flex;
+    flex-flow: column;
     justify-content: center;
-/*     margin:1rem; */
+    margin: 1em;
+    border: 1em solid rgb(122, 122, 0);
 }
 
 header{
     flex-grow: 1;
 }
 
-.title{
-    font-size:2rem;
-    text-align:center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+main{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
 
-    transform-origin: center;
-    padding: 1rem;
-    border: 1rem solid rgb(122, 122, 0);
+section{
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    
+    margin-block: 1em;
+    padding: 1em;
+
+    border-radius: 0.3em;
+    width: 80vw;
+    border: 0.1em solid rgb(122, 122, 0);
+}
+
+/* CLASS SELECTORS */
+
+.title{
+    font-size:2em;
+    text-align:center;
+
+    padding: 0.5em;
+    border-bottom: 0.5em solid rgb(122, 122, 0);
     color: white;
     background-color: olive;
 }
