--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 body{
     display:flex;
     flex-flow: column;
-    justify-content: center;
+/*     justify-content: center; */
     margin: 1em;
     border: 1em solid rgb(122, 122, 0);
 }
@@ -20,9 +20,13 @@ header{
 }
 
 main{
+    overflow-x:scroll;
     display: flex;
     flex-flow: column;
+    /* flex-wrap: wrap; */
     align-items: center;
+    justify-content: space-around;
+    height: 100vh;
 }
 
 section{
@@ -30,10 +34,8 @@ section{
     flex-flow: column;
     align-items: center;
     
-    margin-block: 1em;
-    padding: 1em;
-
     border-radius: 0.3em;
+    height:30vh;
     width: 80vw;
     border: 0.1em solid rgb(122, 122, 0);
 }
