--- a/style.css
+++ b/style.css
@@ -120,3 +120,10 @@ img{
     padding: 0.4%;
     height: 50%;
 }
+a {
+    min-width: 6em;
+    min-height: 6em;
+    border-radius: 20%;
+    padding: 0.4%;
+    height: 50%;  
+}
