--- a/styles-v2.css
+++ b/styles-v2.css
@@ -1,16 +1,35 @@
 *{
     box-sizing: border-box;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
+body{
+    height: 100vh;
+    background-color: green;
+    display: flex;
+    flex-direction: column;
+}
 
 header{
     background-color: blue;
 }
 
 main{
+/*     height: 80%; */
     background-color: blueviolet;
 }
 
 footer{
     background-color: red;
+}
+
+/* CLASS SELECTORS */
+
+.--body-element{
+    width:100vw;
+}
+.icon{
+    width: 40px;
+    height: 40px;
+    background-color: black;
 }
