--- a/styles-v2.css
+++ b/styles-v2.css
@@ -1,26 +1,65 @@
 *{
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
+/* TYPE SELECTORS */
+
 body{
-    height: 100vh;
+    min-height: 100vh;
     background-color: green;
     display: flex;
-    flex-direction: column;
 }
 
 header{
+    position:fixed;
+    top:0;
+    height: 10vh;
     background-color: blue;
+    text-align: center;
 }
 
-main{
-/*     height: 80%; */
+h1{
+    padding: 10px;
+    color: white;
+}
+
+main.--body-element{
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    height:80vh;
+    overflow-y:scroll;
     background-color: blueviolet;
+
 }
 
 footer{
+    position:fixed;
+    bottom:0;
+    min-height: 10vh;
     background-color: red;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+article.card{
+    position: relative;
+    border: black solid 5px;
+    border-radius: 10px;
+    width: 90vw;
+    min-height: 30vh;
+    margin-block: 2vh;
+    align-self: center;
+}
+
+.--tab{
+    position: absolute;
+    top: -10px;
+    right:-10px;
+/*     background-color: black; */
 }
 
 /* CLASS SELECTORS */
