--- a/styles-v2.css
+++ b/styles-v2.css
@@ -1,3 +1,8 @@
+:root{
+    --identity-color: rgb(100, 100, 0);
+    --background-color: rgb(200, 200, 130);
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -9,7 +14,6 @@
 
 body{
     min-height: 100vh;
-    background-color: green;
     display: flex;
 }
 
@@ -17,7 +21,7 @@ header{
     position:fixed;
     top:0;
     height: 10vh;
-    background-color: blue;
+    background-color: var(--identity-color);
     text-align: center;
 }
 
@@ -32,7 +36,7 @@ main.--body-element{
     align-self: center;
     height:80vh;
     overflow-y:scroll;
-    background-color: blueviolet;
+    background-color: var(--background-color);
 
 }
 
@@ -40,19 +44,20 @@ footer{
     position:fixed;
     bottom:0;
     min-height: 10vh;
-    background-color: red;
+    background-color:var(--identity-color);
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
 article.card{
     position: relative;
-    border: black solid 5px;
+    border: var(--identity-color) solid 5px;
     border-radius: 10px;
     width: 90vw;
     min-height: 30vh;
     margin-block: 2vh;
     align-self: center;
+    background-color: white;
 }
 
 .--tab{
@@ -67,6 +72,8 @@ article.card{
 .--body-element{
     width:100vw;
 }
+
+/* PLACEHOLDER */
 .icon{
     width: 40px;
     height: 40px;
