--- a/styles-v2.css
+++ b/styles-v2.css
@@ -1,6 +1,8 @@
 :root{
     --identity-color: rgb(100, 100, 0);
+    --identity-color-active: rgb(50, 50, 0);
     --background-color: rgb(200, 200, 130);
+    --secondary-color: rgb(255, 196, 0);
 }
 
 *{
@@ -22,10 +24,11 @@ header{
     top:0;
     height: 10vh;
     background-color: var(--identity-color);
-    text-align: center;
+    text-align:center;
 }
 
 h1{
+    font-size: 42px;
     padding: 10px;
     color: white;
 }
@@ -45,12 +48,12 @@ footer{
     bottom:0;
     min-height: 10vh;
     background-color:var(--identity-color);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
 article.card{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
     border: var(--identity-color) solid 5px;
     border-radius: 10px;
     width: 90vw;
@@ -60,17 +63,73 @@ article.card{
     background-color: white;
 }
 
-.--tab{
-    position: absolute;
-    top: -10px;
-    right:-10px;
-/*     background-color: black; */
-}
+
 
 /* CLASS SELECTORS */
 
 .--body-element{
     width:100vw;
+}
+
+.card-section{
+    min-height: 10vh;
+    padding: 2px;
+}
+.--tab{
+    position: absolute;
+    top: -10px;
+    right:-10px;
+    background-color: white;
+    border: 2px solid var(--identity-color);
+}
+
+/* PSEUDO-SELECTORS */
+
+div.--answer{
+    display: flex;
+    flex-direction: column;
+}
+
+div.--answer button{
+    height: 50%;
+    align-self: center;
+}
+
+div.--answer h4{
+    height: 50%;
+    align-self: center;
+}
+div.--tags{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+div.--tags h5{
+    min-width: max-content;
+    min-height: max-content;
+    padding: 3%;
+    border-radius: 5px ;
+    background-color: var(--secondary-color);
+}
+
+footer.--body-element{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+a.bottom-icon{
+    display: flex;
+    justify-content: center;
+    width: 33%;
+}
+
+a.--home{
+    background-color: var(--identity-color-active);
+    height: 10vh;
+    padding: 1vh;
 }
 
 /* PLACEHOLDER */
