--- a/style.css
+++ b/style.css
@@ -1,129 +1,45 @@
 :root{
-    --borders: 1vh solid rgb(100,100,00)
- }
+    --identity-color: rgb(100, 100, 0);
+    --identity-color-active: rgb(50, 50, 0);
+    --background-color: rgb(200, 200, 130);
+    --secondary-color: rgb(255, 196, 0);
+}
 
-* {
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-
-/* TYPE SELECTORS */
-
-body{
-    height:100vh;
-    display:flex;
-    flex-flow: column;
-/*     justify-content: center; */
-/*     margin: 1em; */
-    border:var(--borders);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-header{
-    padding: 0.5em;
-    border-bottom:var(--borders);
-    color: white;
-    background-color: olive;
-    height: 20vh;
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+header {
+    position: absolute;
+    top: 0px;
+    min-height: 10vh;
+    min-width: inherit;
+    background-color: blueviolet;
+
 }
 
 main{
-    height: 80vh;
-    overflow-y:scroll;
+    position: absolute;
+    top: 10vh;
     display: flex;
-    flex-flow: column;
-    /* flex-wrap: wrap; */
-    align-items: center;
-    /* justify-content: space-around; */
 }
 
 footer{
-    display: flex;
-    justify-self: flex-end;
-    justify-content: space-around;
-    align-items: center;
-    height: 20vh;
-    background-color: olive;
-    border-top: var(--borders);
-}
-
-section {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    justify-content: space-around;
-    margin: 1em;
-    border-radius: 0.3em;
-    min-height:40vh;
-    width: 80vw;
-    border: var(--borders);
-}
-
-h5{
-    background-color: gray;
-    border-radius: 10%;
-    padding: 1%;
-    min-width: 16vw;
-    margin: 2%;
-}
-
-/* CLASS SELECTORS */
-
-.title{
-    font-size:2em;
-    text-align:center;
-}
-
-.card-section{
-    display: flex;
-    min-height: 5vh;
-    justify-content: space-between;
-
-}
-.--tags{
-    display:flex;
-    align-self:flex-start;
-    align-content: center;
-/*     min-height: 5vh;
-    min-width: 50vw; */
-}
-
-/* ANSWER BUTTON BUTTON WORK-AROUND */
-input[type="checkbox"]{
-    display: none;
-}
-#answer{
-    display: none;
-}
-input[type="checkbox"] + label:after{
-    content: "Show Answer";
-}
-input[type="checkbox"]:checked + label:after{
-    content: "Hide Answer";
-}
-input[type="checkbox"]:checked + label + #answer{
-    display:block;
-}
-/* END OF WORK-AROUND */
-
-label:after{
-    padding:1em;
-    background-color: darkorange;
-    border-radius: 1em;
-}
-
-img{
-    min-width: 6em;
-    min-height: 6em;
-    border-radius: 20%;
-    padding: 0.4%;
-    height: 50%;
-}
-a {
-    min-width: 6em;
-    min-height: 6em;
-    border-radius: 20%;
-    padding: 0.4%;
-    height: 50%;  
+    position: absolute;
+    bottom: 0px;
+    min-height: 10vh;
+    min-width: inherit;
+    background-color: blue;
 }
